styles/typography.css
/* ... */
body {
  margin: 0 auto var(--margin-collapse-bugfix);
  text-rendering: optimizeSpeed; /* https://css-tricks.com/almanac/properties/t/text-rendering */
}
body > * { margin: var(--viewport) }

body > header,
body > main,
body > aside,
body > footer
  { outline: 0.3em dashed }

body > header {}
body > main {}
body > aside { font-size: smaller }
body > footer {
  font-size: medium;
  text-align: center;
}

main > section:first-of-type, body > aside {
  padding-top: var(--line-height);
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 * - http://webtypography.net/3.1.1
 */
hgroup {}
header, h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin: var(--margin) var(--font-size) auto;
  text-shadow: 0.05em 0.05em 0.2em var(--text-shadow);
}
header {
  font-size: larger;
  /* http://webtypography.net/3.2.1 */
  /* http://webtypography.net/3.2.2 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-caps */
  font-variant-caps: small-caps;
}
section > header {
  font-size: calc( var(--largest) * var(--golden-ratio) );
}
header *
  { text-transform: initial }

a:has(header, h1, h2, h3, h4, h5, h6),
:where(header, h1, h2, h3, h4, h5, h6) a
  { color: currentColor }
h1 {
  /* TODO: calc () */
  font-weight: unset;
  text-shadow: 0.04em 0.04em 0;
  line-height: var(--line-height);
  -webkit-text-fill-color: Canvas;
  -webkit-text-stroke-width: thin;
  -webkit-text-stroke-color: GrayText;
}
body * > h1
  { font-size: 2em; /* Override container H1s  */ }

/* hyperlinks */
a { /* TODO: migrate ARIA to accessibility.css */
  padding-inline: 0.1682ch;
  text-underline-offset: 0;
  text-decoration-thickness: .168em;
  -webkit-text-decoration-skip-ink: none;
          text-decoration-skip-ink: none;
}
a, header a:hover {
  text-decoration-color: transparent;
}
a:hover, header a {
  text-decoration-color: ActiveText;
}
a::before, a::after {
  text-decoration: none;
  margin-right: 0.1618em;
}

a.logo {
  font-size: 2em;
  line-height: 2em;
  white-space: nowrap;
  margin-bottom: 0.2em
}
nav li a:hover {
  font-weight: bolder;
  text-decoration: none;
}

hr { /* https://lifewire.com/styling-horizontal-rule-tag-3466399 */
  color: currentColor;
  margin: 3.612em auto;
  background-color: currentColor;
}

/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
dl, ol, ul {
  width: 90%;
  max-width: 70ch;
  font-size: larger;
  text-align: start;
  background-color: currentColor;
  margin: var(--margin-collapse-bugfix) auto var(--line-height);
  padding: var(--margin-collapse-bugfix) 0 var(--margin-collapse-bugfix) var(--line-height);
}
dl dl, ol ol, ol ul, ul ol, ul ul {
  margin-bottom: var(--margin-collapse-bugfix);
  width: auto;
}
nav > details > ul {}
dt {
  font-weight: bolder;
  line-height: 3.6182ch;
  padding: var(--margin-collapse-bugfix) 1ch;
  margin: 0.6182ch 0 var(--margin-collapse-bugfix);
}
li {}
dd {}
dd, li {
  margin: var(--margin-collapse-bugfix) auto 0;
  padding: var(--margin-collapse-bugfix) 0.6182ch;
  line-height: calc( var(--line-height) * var(--GOLDEN-RATIO) * 0.8 );
}
dd, li li {
  font-size: var(--smaller);
}
dd dd:first-of-type, li li:first-of-type {}
nav li, nav li {}
nav dd, nav li li { font-size: 1em }
nav dt + dd, nav li li:first-of-type
  { margin-top: 0 }
details > dl, details > dd,
details > ol li, details > ul li {}

abbr { /* http://webtypography.net/3.2.2 */
  font-style: normal;
  font-variant-numeric: oldstyle-nums;
}
abbr[title] {
  border-bottom: 0;
  text-decoration-skip-ink: none;
  text-decoration: underline dotted;
}

del, s {
  opacity: 0.618;
  text-decoration: line-through;
  text-decoration-style: wavy
}
del {
  text-decoration-color: ActiveText
}
ins {
  text-decoration-color: HighlightText
}

del::before
  { content: '−' /* https://en.wikipedia.org/wiki/Dash */ }

ins::before
  { content: '+' }

em { /* https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis */
  display: contents;
  padding-inline: calc(.1682ch * var(--GOLDEN-RATIO));
}
b, strong
  { font-weight: bolder }
b {}
p, q, address {
  max-width: 80ch;
  text-align: start;
  padding: var(--margin-collapse-bugfix) var(--line-height);
  margin: var(--margin-collapse-bugfix) auto var(--line-height);
}
p {
  display: flow-root; /* https://css-tricks.com/display-flow-root */
  /* https://edgee.net/what-font-size-should-you-use-for-body-copy-text-and-why */
  /* 16x0.81=13 */
}

q { /* quotes */
  quotes:
    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"
  ; /* quotes */

/* Two pairs: */
  quotes: ““” “”” “‘” “’”;
  font-style: italic;
  vertical-align: top;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
   /*
    - https://tympanus.net/codrops/css_reference/quotes/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/quotes
  */
}
q::before {}
q::after
  { content: close-quote }

p q, q q {
  font-size: var(--smaller);
  padding-inline-end: initial;
  padding-inline-start: initial;
}
p q { }
q q { }

b[autocapitalize], p[autocapitalize=words], p[autocapitalize=characters], p[autocapitalize]::first-letter {
  color: ActiveText;
  font-weight: bold;
  font-size: calc( 100% * var(--GOLDEN-RATIO) );
}
p[autocapitalize=on]::first-letter {
  color: Canvas;
  display: flow-root;
  background: inherit;
}

[autocapitalize=words]{ text-transform: capitalize }
[autocapitalize=characters] { text-transform: uppercase }
[autocapitalize=off], [autocapitalize=none] { text-transform: none }

pre, code, kbd, samp {
  padding: 0 0.1618em;
  background-color:  ButtonFace;
}
pre {
  overflow: overlay;
  text-align: initial;
  margin: var(--p-margin);
}
code {
  white-space: initial;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
  font-size: smaller;
  white-space: break-spaces;
}
/* ... */

